# com.github.libuv-libuv

./: .build  CMakeLists.txt  Jenkinsfile  build_artifact.py
libuv/: CMakeLists.txt  __README__.txt
libuv/installer/: libuv.xml
libuv/patches/: 001_always_install.diff  001_build_with_fPIC.diff  002_always_install.diff
